# SoxFilter

./: .gitignore  CMakeLists.txt  README.md  SoxFilter.sln  SoxFilter_usages.txt
SoxFilter/: SoxFilter.rc  SoxFilter.vcxproj  SoxFilter.vcxproj.filters  soxfilter.cpp
custom-files/: soxconfig.h
libsox-ms/: libsox.vcxproj  libsox.vcxproj.filters
